package com.gl.model;

public interface Observateur {
    void miseAJour();
}
